# climate-metrix-agt

./: .gitignore  AGENTS.md  README.md  main.py
ghg-engine-prototype/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api_main.py  config.py  docker-compose.yml  project_store.py  pyproject.toml
ghg-engine-prototype/api/: app.py  dependencies.py  dto.py  schemas.py
ghg-engine-prototype/api/routers/: calculation.py  catalog.py  projects.py
ghg-engine-prototype/data/: activity_types.json  emission_factors.json  factors.csv  ghg_metadata.json  ghg_projects.sqlite  grid_regions.json  routing.csv  unit_definitions.json
ghg-engine-prototype/data/reference_data/: fx_rates.csv  us_cpi_u.csv
ghg-engine-prototype/docs/: facility-checklist-alignment.md  handoff-notes-2026-04.md  operational-inventory-coverage-catalog.md  phased-development-plan.md  spend-based-accounting-plan.md
ghg-engine-prototype/frontend/: eslint.config.js  index.html  package-lock.json  package.json
ghg-engine-prototype/frontend/src/: ActivityDetailDialog.jsx  ActivityInputsPanel.jsx  AddActivityDialog.jsx  AddReportingUnitDialog.jsx  App.jsx  AuditTab.jsx  AutosaveStatusChip.jsx  ByActivitySidebar.jsx  ByActivityTable.jsx  ByFacilityTable.jsx  ByReportingUnitTable.jsx  CatalogCoverageBrowser.jsx  CatalogTab.jsx  ConfigureSourcesDialog.jsx  CoverageBanner.jsx  CoverageWidget.jsx  DashboardTab.jsx  EditProjectSetupDialog.jsx  FacilitiesTab.jsx  ManageReportingUnitsDialog.jsx  NoticesBanner.jsx  NotificationsPanel.jsx  ProjectSetupForm.jsx  ProjectsView.jsx  RepeatableActivityDialog.jsx  ReportingUnitsTab.jsx  ResultsTab.jsx  RowByRowView.jsx  ScopeChips.jsx  Sidebar.jsx  SpendInputsTab.jsx  SpendMappingDialog.jsx  SpendRowsTable.jsx  StatusChip.jsx  VersionTimeline.jsx  activityDrafts.js  activityDrafts.test.js  api.js  applicability.js  applicability.test.js  (+35 more)
ghg-engine-prototype/ghg_engine/: __init__.py  activity_catalog.py  audit.py  document_factors.py  engine.py  factors.py  gwp.py  models.py  perf_profile.py  routing.py  time_utils.py  units.py
ghg-engine-prototype/ghg_engine/adapters/: __init__.py  legacy_calculation.py
ghg-engine-prototype/ghg_engine/application/: __init__.py  calculate_inventory.py
ghg-engine-prototype/ghg_engine/domain/: __init__.py  activity.py  common.py  factors.py  locus.py  policy.py  resolved_activity.py
ghg-engine-prototype/ghg_engine/eqms/: base.py  context.py  direct_factor.py  distance_plus_efficiency.py  freight_ton_mile.py  miles_to_fuel.py  passenger_distance.py  refrigerant_mass_to_gwp.py  registry.py  scope2_energy.py  spend_based.py  waste_mass.py
ghg-engine-prototype/ghg_engine/infrastructure/: __init__.py  sqlite_common.py  sqlite_factors.py  sqlite_inventory.py  sqlite_workspace.py
ghg-engine-prototype/ghg_engine/ports/: __init__.py  factor_store.py  persistence.py
ghg-engine-prototype/ghg_engine/services/: __init__.py  analytics.py  applicability.py  calculation_orchestrator.py  factor_selector.py  factor_source_coverage.py  locus_resolver.py
ghg-engine-prototype/ghg_engine/spend_based/: __init__.py  (+1 more)
ghg-engine-prototype/ghg_prototype.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ghg-engine-prototype/tests/: test_activity_catalog.py  test_analytics.py  test_app_runtime.py  test_applicability_service.py  test_audit.py  test_calculation_applicability.py  test_calculation_error_envelope.py  test_catalog_api.py  test_domain_boundary.py  test_dto_boundary.py  test_eeio_ingestion.py  test_ef_source_index.py  test_eqm_coverage.py  test_factor_backend_contracts.py  test_factor_selection.py  test_factor_store.py  test_gl_mappings_api.py  test_project_draft.py  test_project_draft_api.py  test_project_store.py  test_resolved_locus_execution.py  test_smoke.py  test_spend_based_e2e.py  test_spend_based_method.py  test_spend_factor_browsing.py  test_units.py
ghg-engine-prototype/tools/: benchmark_calc.py  index_ef_sources.py  ingest_eeio_factors.py
(+68 files in other folders)
