[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghg-prototype"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pint>=0.23",
  "pandas>=2.0",
  "python-dateutil>=2.9",
]

[tool.pytest.ini_options]
addopts = "-q --cov=ghg_engine --cov-report=term-missing"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_any_generics = true
ignore_missing_imports = true

[tool.setuptools]
packages = ["ghg_engine"]
py-modules = ["api_main", "project_store", "config"]
