[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghg-prototype"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pint>=0.23",
  "pandas>=2.0",
  "python-dateutil>=2.9",
  # Phase E1 — spend-based emissions ingestion. ``openpyxl`` lets pandas
  # parse the USEEIO ``SupplyChainGHGEmissionFactors`` xlsx and is also
  # used by the test fixtures.
  "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
]
# pymrio parses EXIOBASE IOT zip bundles for the EXIOBASE branch of
# the EEIO ingestion script. Its current release pins
# ``openpyxl<3.1.1`` which conflicts with pandas's ``>=3.1.5``, so
# pymrio is intentionally omitted from this project's resolved
# dependency graph. The EXIOBASE branch of ``tools/ingest_eeio_factors.py``
# imports pymrio lazily; install it into a parallel environment
# (``pip install pymrio``) before invoking the EXIOBASE ingestion
# path. The USEEIO branch needs only the default deps.

[tool.pytest.ini_options]
addopts = "-q --cov=ghg_engine --cov-report=term-missing"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"api/routers/*.py" = ["B008"]  # Depends() in default args is idiomatic FastAPI

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_any_generics = true
ignore_missing_imports = true

[tool.setuptools]
py-modules = ["api_main", "project_store", "config"]

[tool.setuptools.packages.find]
# tools/ is on setuptools' default auto-discovery exclude list (it's
# a convention name for dev-only scripts); we include it explicitly
# so the EEIO ingestion module is importable from tests and CLI.
include = ["ghg_engine*", "api*", "tools*"]
